testdata/baselines/reference/submodule/compiler/parseJsxElementInUnaryExpressionNoCrash2.errors.txt
a.js(1,2): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
a.js(2,1): error TS1109: Expression expected.


==== a.js (2 errors) ====
    ~<></> <
     ~~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
    
    
!!! error TS1109: Expression expected.